--- a/index.html
+++ b/index.html
@@ -11,6 +11,51 @@
       type="text/css"
     />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <!-- customize  -->
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+              main: "F4F7FF",
+              white: "FFFFFF",
+              btn_bg: "3752FD",
+            },
+          },
+        },
+      };
+    </script>
   </head>
-  <body></body>
+  <body class="bg-gray-50 min-h-screen">
+    <!-- header section  -->
+    <header class="pt-5">
+      <nav
+        class="max-w-7xl mx-auto flex justify-between items-center bg-white p-3 rounded-lg"
+      >
+        <!-- left -->
+        <div class="flex items-center">
+          <div class="w-1/4 mr-2">
+            <img class="w-full" src="./assets/logo.png" alt="" />
+          </div>
+          <h3 class="text-xl">Dev<span class="font-bold">Board</span></h3>
+        </div>
+        <!-- right -->
+        <div class="flex items-center justify-between">
+          <div
+            class="flex items-center justify-between bg-gray-50 py-1 px-2 rounded-full"
+          >
+            <div class="w-4/12">
+              <img class="w-full" src="./assets/checkbox.png" alt="" />
+            </div>
+            <p class="text-xl font-bold">23</p>
+          </div>
+          <div class="w-4/12 bg-gray-50 p-2 rounded-full">
+            <img class="w-full" src="./assets/theme-btn.png" alt="" />
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- main section  -->
+  </body>
 </html>
