--- a/index.html
+++ b/index.html
@@ -27,35 +27,258 @@
       };
     </script>
   </head>
-  <body class="bg-gray-50 min-h-screen">
+  <body class="bg-gray-100">
     <!-- header section  -->
     <header class="pt-5">
-      <nav
-        class="max-w-7xl mx-auto flex justify-between items-center bg-white p-3 rounded-lg"
+      <div
+        class="navbar bg-base-100 shadow-sm max-w-6xl mx-auto rounded-lg px-4"
       >
-        <!-- left -->
-        <div class="flex items-center">
-          <div class="w-1/4 mr-2">
-            <img class="w-full" src="./assets/logo.png" alt="" />
+        <div class="flex-1">
+          <div class="flex items-center">
+            <div class="w-10 mr-1">
+              <img class="w-full" src="./assets/logo.png" alt="website logo" />
+            </div>
+            <h3 class="text-2xl">Dev<span class="font-bold">Board</span></h3>
           </div>
-          <h3 class="text-xl">Dev<span class="font-bold">Board</span></h3>
         </div>
-        <!-- right -->
-        <div class="flex items-center justify-between">
-          <div
-            class="flex items-center justify-between bg-gray-50 py-1 px-2 rounded-full"
-          >
-            <div class="w-4/12">
-              <img class="w-full" src="./assets/checkbox.png" alt="" />
+        <div class="flex items-center gap-2 md:gap-4">
+          <div class="flex items-center bg-gray-50 px-2 py-1 rounded-full">
+            <div class="w-5 mr-2">
+              <img
+                class="w-full"
+                src="./assets/checkbox.png"
+                alt="this is checkbox"
+              />
             </div>
             <p class="text-xl font-bold">23</p>
           </div>
-          <div class="w-4/12 bg-gray-50 p-2 rounded-full">
-            <img class="w-full" src="./assets/theme-btn.png" alt="" />
+
+          <div
+            tabindex="0"
+            role="button"
+            class="btn btn-ghost btn-circle avatar"
+          >
+            <div class="w-10 bg-gray-50 p-2 rounded-full">
+              <img
+                class="w-full"
+                alt="random color picker"
+                src="./assets/theme-btn.png"
+              />
+            </div>
           </div>
         </div>
-      </nav>
+      </div>
     </header>
+
     <!-- main section  -->
+    <main class="max-w-6xl mx-auto py-5">
+      <!-- task date -->
+      <div class="flex justify-between gap-4">
+        <!-- left  -->
+        <div class="basis-9/12 bg-base-100 rounded-lg h-11/12">
+          <!-- task assigned  -->
+          <div class="p-4 grid grid-cols-4 gap-5">
+            <div class="bg-gray-100 flex items-center gap-2 py-4 rounded-lg">
+              <div class="w-10 bg-base-100 p-3 rounded-full ml-5">
+                <img
+                  class="w-full"
+                  src="./assets/checkbox.png"
+                  alt="checkbox"
+                />
+              </div>
+              <div>
+                <p class="text-gray-500 text-sm font-semibold">Task Assigned</p>
+                <p class="text-xl font-bold -mt-1">05</p>
+              </div>
+            </div>
+            <!-- blog  -->
+            <div
+              class="col-span-2 flex items-center gap-3 bg-gradient-to-l to-blue-600 from-blue-300 rounded-lg"
+            >
+              <div class="w-18 ml-5">
+                <img class="w-full" src="./assets/board.png" alt="" />
+              </div>
+              <h4 class="text-white text-lg">
+                Discover Something <br />
+                New Today!
+              </h4>
+            </div>
+            <!-- date  -->
+            <div class="bg-gray-100 flex items-center gap-2 py-4 rounded-lg">
+              <div class="w-10 bg-base-100 p-3 rounded-full ml-4">
+                <img class="w-full" src="./assets/calender.png" alt="date" />
+              </div>
+              <div>
+                <p class="text-gray-500 text-sm font-semibold">Web,</p>
+                <p class="text-xl font-bold">Jul 28 2024</p>
+              </div>
+            </div>
+          </div>
+          <!-- border  -->
+          <div class="border-dashed border-b-2 border-b-slate-200 w-full my-3"></div>
+          <!-- task complete  -->
+          <div class="p-4 grid grid-cols-3 gap-5">
+            <!-- task 1 -->
+            <div class="bg-gray-100 rounded-lg p-3">
+              <p class="bg-base-100 max-w-min px-3 py-1 rounded-lg">ShopEase</p>
+              <h3 class="my-3 text-xl font-semibold">
+                Fix Mobile Button Issue
+              </h3>
+              <p class="bg-base-100 p-2 rounded-md text-sm text-gray-400">
+                Debug using Chrome DevTools, check for overlapping...
+              </p>
+              <div
+                class="border-dashed border-b-2 border-b-slate-200 w-full my-4"
+              ></div>
+              <div class="flex items-end justify-between">
+                <div>
+                  <p class="text-gray-600">Deadline</p>
+                  <h4 class="font-semibold">21 March 2025</h4>
+                </div>
+
+                <button class="px-3 py-1 bg-blue-700 text-white rounded-lg">
+                  Completed
+                </button>
+              </div>
+            </div>
+            <!-- task 1 -->
+            <div class="bg-gray-100 rounded-lg p-3">
+              <p class="bg-base-100 max-w-min px-3 py-1 rounded-lg">ShopEase</p>
+              <h3 class="my-3 text-xl font-semibold">
+                Fix Mobile Button Issue
+              </h3>
+              <p class="bg-base-100 p-2 rounded-md text-sm text-gray-400">
+                Debug using Chrome DevTools, check for overlapping...
+              </p>
+              <div
+                class="border-dashed border-b-2 border-b-slate-200 w-full my-4"
+              ></div>
+              <div class="flex items-end justify-between">
+                <div>
+                  <p class="text-gray-600">Deadline</p>
+                  <h4 class="font-semibold">21 March 2025</h4>
+                </div>
+
+                <button class="px-3 py-1 bg-blue-700 text-white rounded-lg">
+                  Completed
+                </button>
+              </div>
+            </div>
+            <!-- task 1 -->
+            <div class="bg-gray-100 rounded-lg p-3">
+              <p class="bg-base-100 max-w-min px-3 py-1 rounded-lg">ShopEase</p>
+              <h3 class="my-3 text-xl font-semibold">
+                Fix Mobile Button Issue
+              </h3>
+              <p class="bg-base-100 p-2 rounded-md text-sm text-gray-400">
+                Debug using Chrome DevTools, check for overlapping...
+              </p>
+              <div
+                class="border-dashed border-b-2 border-b-slate-200 w-full my-4"
+              ></div>
+              <div class="flex items-end justify-between">
+                <div>
+                  <p class="text-gray-600">Deadline</p>
+                  <h4 class="font-semibold">21 March 2025</h4>
+                </div>
+
+                <button class="px-3 py-1 bg-blue-700 text-white rounded-lg">
+                  Completed
+                </button>
+              </div>
+            </div>
+            <!-- task 1 -->
+            <div class="bg-gray-100 rounded-lg p-3">
+              <p class="bg-base-100 max-w-min px-3 py-1 rounded-lg">ShopEase</p>
+              <h3 class="my-3 text-xl font-semibold">
+                Fix Mobile Button Issue
+              </h3>
+              <p class="bg-base-100 p-2 rounded-md text-sm text-gray-400">
+                Debug using Chrome DevTools, check for overlapping...
+              </p>
+              <div
+                class="border-dashed border-b-2 border-b-slate-200 w-full my-4"
+              ></div>
+              <div class="flex items-end justify-between">
+                <div>
+                  <p class="text-gray-600">Deadline</p>
+                  <h4 class="font-semibold">21 March 2025</h4>
+                </div>
+
+                <button class="px-3 py-1 bg-blue-700 text-white rounded-lg">
+                  Completed
+                </button>
+              </div>
+            </div>
+            <!-- task 1 -->
+            <div class="bg-gray-100 rounded-lg p-3">
+              <p class="bg-base-100 max-w-min px-3 py-1 rounded-lg">ShopEase</p>
+              <h3 class="my-3 text-xl font-semibold">
+                Fix Mobile Button Issue
+              </h3>
+              <p class="bg-base-100 p-2 rounded-md text-sm text-gray-400">
+                Debug using Chrome DevTools, check for overlapping...
+              </p>
+              <div
+                class="border-dashed border-b-2 border-b-slate-200 w-full my-4"
+              ></div>
+              <div class="flex items-end justify-between">
+                <div>
+                  <p class="text-gray-600">Deadline</p>
+                  <h4 class="font-semibold">21 March 2025</h4>
+                </div>
+
+                <button class="px-3 py-1 bg-blue-700 text-white rounded-lg">
+                  Completed
+                </button>
+              </div>
+            </div>
+            <!-- task 1 -->
+            <div class="bg-gray-100 rounded-lg p-3">
+              <p class="bg-base-100 max-w-min px-3 py-1 rounded-lg">ShopEase</p>
+              <h3 class="my-3 text-xl font-semibold">
+                Fix Mobile Button Issue
+              </h3>
+              <p class="bg-base-100 p-2 rounded-md text-sm text-gray-400">
+                Debug using Chrome DevTools, check for overlapping...
+              </p>
+              <div
+                class="border-dashed border-b-2 border-b-slate-200 w-full my-4"
+              ></div>
+              <div class="flex items-end justify-between">
+                <div>
+                  <p class="text-gray-600">Deadline</p>
+                  <h4 class="font-semibold">21 March 2025</h4>
+                </div>
+
+                <button class="px-3 py-1 bg-blue-700 text-white rounded-lg">
+                  Completed
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- right  -->
+        <div class="basis-3/12 bg-base-100 rounded-lg min-h-min">
+         <div class="text-center mt-4">
+            <div class="flex items-center justify-center gap-2">
+                <div>
+                    <img src="./assets/activity.png" alt="clock">
+                </div>
+                <p class="font-semibold">Activity Log</p>
+            </div>
+            <button class="px-3 py-1 bg-blue-700 text-white rounded-lg mt-4">Clear History</button>
+            <div
+                class="border-dashed border-b-2 border-b-slate-200 w-full my-4"
+              ></div>
+         </div>
+         <div class="px-4">
+            <div class="bg-gray-100 rounded-lg p-2 text-gray-500">
+                This is my message 
+            </div>
+         </div>
+      </div>
+    </main>
   </body>
 </html>
