--- a/index.html
+++ b/index.html
@@ -12,20 +12,6 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- customize  -->
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              clifford: "#da373d",
-              main: "F4F7FF",
-              white: "FFFFFF",
-              btn_bg: "3752FD",
-            },
-          },
-        },
-      };
-    </script>
   </head>
   <body class="bg-gray-100">
     <!-- header section  -->
@@ -50,7 +36,7 @@
                 alt="this is checkbox"
               />
             </div>
-            <p class="text-xl font-bold">23</p>
+            <p id="increase-count" class="text-xl font-bold">23</p>
           </div>
 
           <div
@@ -88,7 +74,7 @@
               </div>
               <div>
                 <p class="text-gray-500 text-sm font-semibold">Task Assigned</p>
-                <p class="text-xl font-bold -mt-1">05</p>
+                <p id="decrease-count" class="text-xl font-bold -mt-1">06</p>
               </div>
             </div>
             <!-- blog  -->
@@ -109,8 +95,8 @@
                 <img class="w-full" src="./assets/calender.png" alt="date" />
               </div>
               <div>
-                <p class="text-gray-500 text-sm font-semibold">Web,</p>
-                <p class="text-xl font-bold">Jul 28 2024</p>
+                <p id="current-day" class="text-gray-500 text-sm font-semibold"></p>
+                <p id="current-date" class="text-lg font-bold"></p>
               </div>
             </div>
           </div>
@@ -121,7 +107,7 @@
             <!-- task 1 -->
             <div class="bg-gray-100 rounded-lg p-3">
               <p class="bg-base-100 max-w-min px-3 py-1 rounded-lg">ShopEase</p>
-              <h3 class="my-3 text-xl font-semibold">
+              <h3 class="task-heading my-3 text-xl font-semibold">
                 Fix Mobile Button Issue
               </h3>
               <p class="bg-base-100 p-2 rounded-md text-sm text-gray-400">
@@ -136,19 +122,19 @@
                   <h4 class="font-semibold">21 March 2025</h4>
                 </div>
 
-                <button class="px-3 py-1 bg-blue-700 text-white rounded-lg">
+                <button class="complete-btn px-3 py-1 bg-blue-700 text-white rounded-lg">
                   Completed
                 </button>
               </div>
             </div>
-            <!-- task 1 -->
+            <!-- task 2 -->
             <div class="bg-gray-100 rounded-lg p-3">
-              <p class="bg-base-100 max-w-min px-3 py-1 rounded-lg">ShopEase</p>
-              <h3 class="my-3 text-xl font-semibold">
-                Fix Mobile Button Issue
+              <p class="bg-base-100 max-w-min px-3 py-1 rounded-lg">CloudSync</p>
+              <h3 class="task-heading my-3 text-xl font-semibold">
+                Add Dark Mode
               </h3>
               <p class="bg-base-100 p-2 rounded-md text-sm text-gray-400">
-                Debug using Chrome DevTools, check for overlapping...
+                Store the user's preference in localStorage, update CSS...
               </p>
               <div
                 class="border-dashed border-b-2 border-b-slate-200 w-full my-4"
@@ -159,19 +145,19 @@
                   <h4 class="font-semibold">21 March 2025</h4>
                 </div>
 
-                <button class="px-3 py-1 bg-blue-700 text-white rounded-lg">
+                <button class="complete-btn px-3 py-1 bg-blue-700 text-white rounded-lg">
                   Completed
                 </button>
               </div>
             </div>
-            <!-- task 1 -->
+            <!-- task 3 -->
             <div class="bg-gray-100 rounded-lg p-3">
-              <p class="bg-base-100 max-w-min px-3 py-1 rounded-lg">ShopEase</p>
-              <h3 class="my-3 text-xl font-semibold">
-                Fix Mobile Button Issue
+              <p class="bg-base-100 max-w-min px-3 py-1 rounded-lg">SwiftPay</p>
+              <h3 class="task-heading my-3 text-xl font-semibold">
+                Optimize Home page
               </h3>
               <p class="bg-base-100 p-2 rounded-md text-sm text-gray-400">
-                Debug using Chrome DevTools, check for overlapping...
+                Debug using Chrome DevTools, Check for overlappi...
               </p>
               <div
                 class="border-dashed border-b-2 border-b-slate-200 w-full my-4"
@@ -182,16 +168,16 @@
                   <h4 class="font-semibold">21 March 2025</h4>
                 </div>
 
-                <button class="px-3 py-1 bg-blue-700 text-white rounded-lg">
+                <button class="complete-btn px-3 py-1 bg-blue-700 text-white rounded-lg">
                   Completed
                 </button>
               </div>
             </div>
-            <!-- task 1 -->
+            <!-- task 4 -->
             <div class="bg-gray-100 rounded-lg p-3">
-              <p class="bg-base-100 max-w-min px-3 py-1 rounded-lg">ShopEase</p>
-              <h3 class="my-3 text-xl font-semibold">
-                Fix Mobile Button Issue
+              <p class="bg-base-100 max-w-min px-3 py-1 rounded-lg">Meta</p>
+              <h3 class="task-heading my-3 text-xl font-semibold">
+                Add new emoji
               </h3>
               <p class="bg-base-100 p-2 rounded-md text-sm text-gray-400">
                 Debug using Chrome DevTools, check for overlapping...
@@ -205,16 +191,16 @@
                   <h4 class="font-semibold">21 March 2025</h4>
                 </div>
 
-                <button class="px-3 py-1 bg-blue-700 text-white rounded-lg">
+                <button class="complete-btn  px-3 py-1 bg-blue-700 text-white rounded-lg">
                   Completed
                 </button>
               </div>
             </div>
-            <!-- task 1 -->
+            <!-- task 5 -->
             <div class="bg-gray-100 rounded-lg p-3">
-              <p class="bg-base-100 max-w-min px-3 py-1 rounded-lg">ShopEase</p>
-              <h3 class="my-3 text-xl font-semibold">
-                Fix Mobile Button Issue
+              <p class="bg-base-100 max-w-max px-3 py-1 rounded-lg">Google LLC</p>
+              <h3 class="task-heading my-3 text-xl font-semibold">
+                Integrate OpenAI API
               </h3>
               <p class="bg-base-100 p-2 rounded-md text-sm text-gray-400">
                 Debug using Chrome DevTools, check for overlapping...
@@ -228,16 +214,16 @@
                   <h4 class="font-semibold">21 March 2025</h4>
                 </div>
 
-                <button class="px-3 py-1 bg-blue-700 text-white rounded-lg">
+                <button class="complete-btn  px-3 py-1 bg-blue-700 text-white rounded-lg">
                   Completed
                 </button>
               </div>
             </div>
-            <!-- task 1 -->
+            <!-- task 6 -->
             <div class="bg-gray-100 rounded-lg p-3">
-              <p class="bg-base-100 max-w-min px-3 py-1 rounded-lg">ShopEase</p>
-              <h3 class="my-3 text-xl font-semibold">
-                Fix Mobile Button Issue
+              <p class="bg-base-100 max-w-min px-3 py-1 rounded-lg">Glassdoar</p>
+              <h3 class="task-heading my-3 text-xl font-semibold">
+                Improve Job searching
               </h3>
               <p class="bg-base-100 p-2 rounded-md text-sm text-gray-400">
                 Debug using Chrome DevTools, check for overlapping...
@@ -251,7 +237,7 @@
                   <h4 class="font-semibold">21 March 2025</h4>
                 </div>
 
-                <button class="px-3 py-1 bg-blue-700 text-white rounded-lg">
+                <button class="complete-btn  px-3 py-1 bg-blue-700 text-white rounded-lg">
                   Completed
                 </button>
               </div>
@@ -268,17 +254,16 @@
                 </div>
                 <p class="font-semibold">Activity Log</p>
             </div>
-            <button class="px-3 py-1 bg-blue-700 text-white rounded-lg mt-4">Clear History</button>
+            <button id="clear-history" class="px-3 py-1 bg-blue-700 text-white rounded-lg mt-4">Clear History</button>
             <div
                 class="border-dashed border-b-2 border-b-slate-200 w-full my-4"
               ></div>
          </div>
-         <div class="px-4">
-            <div class="bg-gray-100 rounded-lg p-2 text-gray-500">
-                This is my message 
-            </div>
+         <div id="show-message" class="px-4">
+            
          </div>
       </div>
     </main>
+    <script src="./script/index.js"></script>
   </body>
 </html>
