--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           </div>
 
           <div
+            id="change-color-btn"
             tabindex="0"
             role="button"
             class="btn btn-ghost btn-circle avatar"
@@ -78,8 +79,8 @@
               </div>
             </div>
             <!-- blog  -->
-            <div
-              class="col-span-2 flex items-center gap-3 bg-gradient-to-l to-blue-600 from-blue-300 rounded-lg"
+            <div id="blog"
+              class="hover:cursor-pointer col-span-2 flex items-center gap-3 bg-gradient-to-l to-blue-600 from-blue-300 rounded-lg"
             >
               <div class="w-18 ml-5">
                 <img class="w-full" src="./assets/board.png" alt="" />
