--- a/blog.html
+++ b/blog.html
@@ -64,7 +64,7 @@
           ></div>
           <!-- ans  -->
           <p class="px-4 pb-4">
-            innerHTML:It is the HTML content inside the element. it allows
+            innerHTML:It is the HTML content inside the element. it's allows
             modifying the element of HTML structure.
           </p>
           <p class="px-4 pb-4">
@@ -87,10 +87,10 @@
           ></div>
           <!-- ans  -->
           <p class="px-4 pb-4">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque
-            ab, iste dolores iusto doloribus tempora omnis, quasi sunt et a rem
-            unde voluptatibus ex. Ipsa quia perspiciatis numquam pariatur
-            cumque.
+            Event delegation is a technique where event listener add in parent
+            element instead of every single child element . When we click child
+            element it's bubbles up to parent and allowing event handling from
+            the parent element
           </p>
         </div>
         <div class="bg-base-100 rounded-lg">
@@ -103,10 +103,9 @@
           ></div>
           <!-- ans  -->
           <p class="px-4 pb-4">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque
-            ab, iste dolores iusto doloribus tempora omnis, quasi sunt et a rem
-            unde voluptatibus ex. Ipsa quia perspiciatis numquam pariatur
-            cumque.
+            Event bubbling is the concept of DOM when we receives an event that
+            event bubbles up to its parent or any ancestor element until it
+            reaches the root element.
           </p>
         </div>
         <div class="bg-base-100 rounded-lg">
@@ -120,10 +119,12 @@
           ></div>
           <!-- ans  -->
           <p class="px-4 pb-4">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque
-            ab, iste dolores iusto doloribus tempora omnis, quasi sunt et a rem
-            unde voluptatibus ex. Ipsa quia perspiciatis numquam pariatur
-            cumque.
+            In JavaScript you can create , add, and remove element dynamically
+            using DOM. For create element you use document.createElement("") (
+            within dabble quote you can write any tag name). To add this we use
+            appendChild(write create element within this). If we need to delete
+            this you can use removeChild(write which element want to remove).
+            This
           </p>
         </div>
       </div>
