--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <img class="w-full" src="./assets/board.png" alt="" />
               </div>
               <h4 class="text-white text-lg">
-                Discover Something <br />
+                Discover Something 
                 New Today!
               </h4>
             </div>
@@ -96,7 +96,7 @@
                 <img class="w-full" src="./assets/calender.png" alt="date" />
               </div>
               <div>
-                <p id="current-day" class="text-gray-500 text-sm font-semibold"></p>
+                <p id="current-day" class="text-gray-500 text-lg font-semibold"></p>
                 <p id="current-date" class="text-lg font-bold"></p>
               </div>
             </div>
@@ -123,7 +123,7 @@
                   <h4 class="font-semibold">21 March 2025</h4>
                 </div>
 
-                <button class="complete-btn px-3 py-1 bg-blue-700 text-white rounded-lg">
+                <button class="complete-btn px-3 py-1 bg-blue-700 text-white rounded-lg hover:cursor-pointer">
                   Completed
                 </button>
               </div>
@@ -146,7 +146,7 @@
                   <h4 class="font-semibold">21 March 2025</h4>
                 </div>
 
-                <button class="complete-btn px-3 py-1 bg-blue-700 text-white rounded-lg">
+                <button class="complete-btn px-3 py-1 bg-blue-700 text-white rounded-lg hover:cursor-pointer">
                   Completed
                 </button>
               </div>
@@ -169,7 +169,7 @@
                   <h4 class="font-semibold">21 March 2025</h4>
                 </div>
 
-                <button class="complete-btn px-3 py-1 bg-blue-700 text-white rounded-lg">
+                <button class="complete-btn px-3 py-1 bg-blue-700 text-white rounded-lg hover:cursor-pointer">
                   Completed
                 </button>
               </div>
@@ -192,7 +192,7 @@
                   <h4 class="font-semibold">21 March 2025</h4>
                 </div>
 
-                <button class="complete-btn  px-3 py-1 bg-blue-700 text-white rounded-lg">
+                <button class="complete-btn  px-3 py-1 bg-blue-700 text-white rounded-lg hover:cursor-pointer">
                   Completed
                 </button>
               </div>
@@ -215,7 +215,7 @@
                   <h4 class="font-semibold">21 March 2025</h4>
                 </div>
 
-                <button class="complete-btn  px-3 py-1 bg-blue-700 text-white rounded-lg">
+                <button class="complete-btn  px-3 py-1 bg-blue-700 text-white rounded-lg hover:cursor-pointer">
                   Completed
                 </button>
               </div>
@@ -238,7 +238,7 @@
                   <h4 class="font-semibold">21 March 2025</h4>
                 </div>
 
-                <button class="complete-btn  px-3 py-1 bg-blue-700 text-white rounded-lg">
+                <button class="complete-btn  px-3 py-1 bg-blue-700 text-white rounded-lg hover:cursor-pointer">
                   Completed
                 </button>
               </div>
